dynamix/force-app/main/default/objects/communicat_o__Engage__c/communicat_o__Engage__c.object-meta.xml
<CustomObject>
    <label>Engage 360</label>
    <nameField>
        <label>Engage 360 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engage 360</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>