dynamix/force-app/main/default/objects/communicat_o__Engage__c/fields/communicat_o__Channel__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Channel__c</fullName>
    <label>Channel</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>