dynamix/force-app/main/default/objects/communicat_o__Engage__c/fields/communicat_o__Quick_Action__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Quick_Action__c</fullName>
    <label>Quick Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>