dynamix/force-app/main/default/objects/communicat_o__Engage__c/fields/communicat_o__Self_Subscribe__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Self_Subscribe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self Subscribe</label>
    <type>Checkbox</type>
</CustomField>