dynamix/force-app/main/default/objects/communicat_o__Engage__c/fields/communicat_o__Self_Subscribe_Keyword__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Self_Subscribe_Keyword__c</fullName>
    <label>Self Subscribe Keyword</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>