dynamix/force-app/main/default/objects/communicat_o__Engage__c/validationRules/communicat_o__Self_Subcribe_Keyword_Without_Space.validationRule-meta.xml
<ValidationRule>
    <fullName>communicat_o__Self_Subcribe_Keyword_Without_Space</fullName>
    <active>true</active>
    <description>Error occurs when space is there between two words.</description>
    <errorConditionFormula>CONTAINS( communicat_o__Self_Subscribe_Keyword__c ,&apos; &apos;)</errorConditionFormula>
    <errorDisplayField>communicat_o__Self_Subscribe_Keyword__c</errorDisplayField>
    <errorMessage>Enter correct format</errorMessage>
</ValidationRule>