dynamix/force-app/main/default/objects/communicat_o__Engage__c/listViews/communicat_o__All.listView-meta.xml
<ListView>
    <fullName>communicat_o__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>